--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ th, td
   padding: .5em;
   letter-spacing: 0em;
   text-align: center;
-  border-bottom: 1px solid white;
+  border-bottom: .1em solid white;
 }
 
 th
